# FARSIGHT

./: .gitignore  CMakeLists.txt  readme.md  run_FARRSIGHT.cpp  run_FARRSIGHT2.cpp  run_FARRSIGHT_partial_nlohmann.cpp  test.cpp
inc/: AMRSimulation.hpp  AMRStructure.hpp  FieldStructure.hpp  Panel.hpp  initial_distributions.hpp
inc_eigen/: eigen-3.3.7
interfaces/: FARRSIGHT_Interface.py  FARRSIGHT_Interface_all_command_line.py  FS_int.py  sample_FARRSIGHT_diagnostics.py
interfaces/pyFARRSIGHT/: FARRSIGHT_types.py  FS_int.py  __init__.py  deck_utilities.py  diagnostic_plot.py  logf.py  make_dirs.py  plot_e.py  run.py
interfaces/python_FARRSIGHT_files/: FARRSIGHT_types.py  FS_int.py  __init__.py  deck_utilities.py  diagnostic_plot.py  logf.py  make_dirs.py  panel_height.py  phase_space_vis.py  plot_e.py  run.py
src/: AMRStructure.cpp  AMRStructure_amr.cpp  AMRStructure_field.cpp  AMRStructure_interp.cpp  AMRStructure_io.cpp  AMRStructure_remesh.cpp  AMRStructure_step.cpp  CMakeLists.txt  CMakeLists2.txt  FieldStructure.cpp  Panel.cpp  initial_distributions.cpp
src/simulation_files/: AMRSimulation.cpp  AMRSimulation_field.cpp  AMRSimulation_gather_scatter.cpp  AMRSimulation_io.cpp  AMRSimulation_load.cpp  AMRSimulation_remesh.cpp  AMRSimulation_run.cpp  AMRSimulation_step.cpp  CMakeLists.txt
src/structure_files/: AMRStructure.cpp  AMRStructure_amr.cpp  AMRStructure_interp.cpp  AMRStructure_io.cpp  CMakeLists.txt  Panel.cpp  initial_distributions.cpp
